--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,10 +76,10 @@ input, select, textarea {
   position: absolute;
   left: 50%;
   top: 50%;
+  transform: translate(-50%, -50%)
   border: 0px solid;
   border-radius: 5px;
   overflow: hidden;
-  background-color: #1f1f1f;
   z-index: 1;
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
 }
@@ -101,6 +101,11 @@ input, select, textarea {
 .modal h2,
 .modal h3 {
   color: #1f1f1f;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
 }
 
 
