Fix missing semicolon

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,7 +76,7 @@ input, select, textarea {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%);
   border: 0px solid;
   border-radius: 5px;
   overflow: hidden;
