--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3449,6 +3449,7 @@ input, select, textarea {
 					font-size: 0.9em;
 				}
 
+        /*
 		@media screen and (max-width: 736px) {
 
 			#nav {
@@ -3460,6 +3461,7 @@ input, select, textarea {
 				}
 
 		}
+    */
 
 /* Main */
 
