fix mobile navbar looking like poopy maybe

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3350,6 +3350,7 @@ input, select, textarea {
 		position: absolute;
 		width: 64em;
 		max-width: calc(100% - 4em);
+    min-width: 26em;
 		padding: 1em;
 		background-color: #f7f7f7;
 		border-top-left-radius: 0.25em;
